@@ -15,8 +15,8 @@ import re
 from os import path
 
 from apiclient import discovery
-
-import gauth
+import httplib2
+from oauth2client import service_account
 
 
 def find_index_document(service):
@@ -115,6 +115,24 @@ def collate_filenames(filenames, output_filename):
         raise IOError("Could not produce output '{}'".format(output_filename))
 
 
+SERVICE_ACCOUNT_FILE = path.join(os.environ['HOME'],
+                                 '.google-apis-service-account.json')
+
+def get_auth_via_service_account(scopes):
+    """Get an authenticated http object via a service account.
+
+    Args:
+      scopes: A string or a list of strings, the scopes to get credentials for.
+    Returns:
+      A pair or (credentials, http) objects, where 'http' is an authenticated
+      http client object, from which you can use the Google APIs.
+    """
+    credentials = service_account.ServiceAccountCredentials.from_json_keyfile_name(
+        SERVICE_ACCOUNT_FILE, scopes)
+    http = httplib2.Http()
+    credentials.authorize(http)
+    return credentials, http
+
 
 def main():
     logging.basicConfig(level=logging.INFO, format='%(levelname)-8s: %(message)s')
@@ -132,7 +150,7 @@ def main():
 
     # Connect, with authentication.
     scopes = ['https://www.googleapis.com/auth/drive']
-    _, http = gauth.get_auth_via_service_account(scopes)
+    _, http = get_auth_via_service_account(scopes)
     service = discovery.build('drive', 'v3', http=http)
 
     # Get the list of documents.
